crates/otter-runtime/tests/compile_fail/runtime_raw_heap_access_rejected.stderr
error[E0599]: no method named `gc_heap_mut` found for struct `otter_runtime::Runtime` in the current scope
 --> tests/compile_fail/runtime_raw_heap_access_rejected.rs:5:21
  |
5 |     let _ = runtime.gc_heap_mut();
  |                     ^^^^^^^^^^^
  |
help: there is a method `tap_mut` with a similar name, but with different arguments
 --> $CARGO/tap-$VERSION/src/tap.rs
  |
  |     fn tap_mut(mut self, func: impl FnOnce(&mut Self)) -> Self {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
